--- a/kustomize/overlays/docker-desktop/deployment.yaml
+++ b/kustomize/overlays/docker-desktop/deployment.yaml
@@ -16,6 +16,8 @@ spec:
           - --entrypoints.websecure.Address=:443
           - --providers.kubernetescrd
           - --providers.kubernetescrd.allowCrossNamespace=true
+          ###- --api.dashboard=true
+          ###- --api.insecure=true
           ###- --certificatesresolvers.myresolver.acme.tlschallenge
           ###- --certificatesresolvers.myresolver.acme.email=jay.amorin@gmail.com
           ###- --certificatesresolvers.myresolver.acme.storage=acme.json
