--- a/kustomize/overlays/docker-desktop/kustomization.yaml
+++ b/kustomize/overlays/docker-desktop/kustomization.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: traefik
-bases:
+resources:
   - ../../base
+  - ingressroute.yaml
+  - dashboard-service.yaml
 patchesStrategicMerge:
   - deployment.yaml
   - service.yaml
-resources:
-  - service-dashboard.yaml
