--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -9,79 +9,33 @@ on:
     branches:
       - main
       - develop
-    types:
-      - closed
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+    if: ${{ (github.event.pull_request.types == 'opened') || (github.event.pull_request.types == 'reopened') }}
     steps:
-      - name: Git Checkout
+      - name: checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: '0'
-      - name: Setup Kustomize
-        uses: imranismail/setup-kustomize@v2
-        with:
-          kustomize-version: "5.0.0"
-      - name: Build KRM resources
-        run: |
-            kustomize build kustomize/overlays/docker-desktop
+      - name: test krm
+        uses: jayamorin/gha-workflows/.github/workflows/test-krm.yaml@develop
 
-  tag-develop:
+  develop:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/develop' }}
     needs: tests
+    if: ${{ (github.event.pull_request.merged == 'true') }}
     steps:
-      - name: Git Checkout
+      - name: checkout
         uses: actions/checkout@v3
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{ secrets.JAYAMORIN_TOKEN }}
-          pre_release_branches: develop
-          append_to_pre_release_tag: rc
+      - name: tag and preprelease
+        uses: jayamorin/gha-workflows/.github/workflows/tag-prerelease-develop@develop
 
-  tag-main:
+  main:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' }}
     needs: tests
+    if: ${{ (github.event.pull_request.merged == 'true') }}
     steps:
-      - name: Git Checkout
+      - name: checkout
         uses: actions/checkout@v3
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{ secrets.JAYAMORIN_TOKEN }}
-          release_branches: main
-
-  pre-release-develop:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/develop' }}
-    needs: tag-develop
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          prerelease: true
-          tag: ${{ needs.tag-develop.tag_version.outputs.new_tag }}
-          name: Release ${{ needs.tag-develop.tag_version.outputs.new_tag }}
-          body: ${{ needs.tag-develop.tag_version.outputs.changelog }}
-
-  release-main:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' }}
-    needs: tag-main
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ needs.tag-main.tag_version.outputs.new_tag }}
-          name: Release ${{ needs.tag-main.tag_version.outputs.new_tag }}
-          body: ${{ needs.tag-main.tag_version.outputs.changelog }}
+      - name: tag and release
+        uses: jayamorin/gha-workflows/.github/workflows/tag-release-main.yaml@develop
