--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -11,7 +11,9 @@ on:
       - develop
     types:
       - closed
-
+      - ready_for_review
+      - review_requested
+      
 jobs:
   tests:
     uses: jayamorin/gha-workflows/.github/workflows/test-krm.yaml@develop
@@ -19,6 +21,9 @@ jobs:
   develop:
     uses: jayamorin/gha-workflows/.github/workflows/tag-prerelease-develop.yaml@develop
     needs: tests
+    secrets: inherit
 
   main:
     uses: jayamorin/gha-workflows/.github/workflows/tag-release-main.yaml@develop
+    needs: tests
+    secrets: inherit
