--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -15,14 +15,14 @@ on:
       
 jobs:
   tests:
-    uses: jayamorin/gha-workflows/.github/workflows/test-krm.yaml@develop
+    uses: jayamorin/gha-workflows/.github/workflows/test-krm.yaml@main
 
   develop:
-    uses: jayamorin/gha-workflows/.github/workflows/tag-prerelease-develop.yaml@develop
+    uses: jayamorin/gha-workflows/.github/workflows/tag-prerelease-develop.yaml@main
     needs: tests
     secrets: inherit
 
   main:
-    uses: jayamorin/gha-workflows/.github/workflows/tag-release-main.yaml@develop
+    uses: jayamorin/gha-workflows/.github/workflows/tag-release-main.yaml@main
     needs: tests
     secrets: inherit
