--- a/kustomize/overlays/docker-desktop/service.yaml
+++ b/kustomize/overlays/docker-desktop/service.yaml
@@ -4,6 +4,10 @@ kind: Service
 metadata:
   name: traefik-ingress-controller
 spec:
+  ports:
+    - protocol: TCP
+      name: elasticsearch
+      port: 9200
   externalIPs:
     - 192.168.254.252
   type: LoadBalancer
