--- a/kustomize/overlays/docker-server/dashboard-service.yaml
+++ b/kustomize/overlays/docker-server/dashboard-service.yaml
@@ -2,17 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik-ingress-controller
+  name: traefik-ingress-controller-dashboard
 spec:
   ports:
     - protocol: TCP
-      name: web
-      port: 80
-      targetPort: web
-    - protocol: TCP
-      name: websecure
-      port: 443
-      targetPort: websecure
+      name: dashboard
+      port: 8080
+      targetPort: dashboard
   selector:
     app.kubernetes.io/name: traefik-ingress-controller
     app.kubernetes.io/component: load-balancer
