--- a/kustomize/base/daemonset.yaml
+++ b/kustomize/base/daemonset.yaml
@@ -1,5 +1,5 @@
 ---
-kind: Deployment
+kind: Daemonset
 apiVersion: apps/v1
 metadata:
   name: traefik-ingress-controller
@@ -7,7 +7,6 @@ metadata:
     app.kubernetes.io/name: traefik-ingress-controller
     app.kubernetes.io/component: load-balancer
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: traefik-ingress-controller
@@ -38,5 +37,3 @@ spec:
               containerPort: 80
             - name: websecure
               containerPort: 443
-            - name: dashboard
-              containerPort: 8080
