--- a/kustomize/base/service.yaml
+++ b/kustomize/base/service.yaml
@@ -8,11 +8,12 @@ spec:
     - protocol: TCP
       name: web
       port: 80
-      targetPort: web
+      nodePort: 30080
     - protocol: TCP
       name: websecure
       port: 443
-      targetPort: websecure
+      nodePort: 30443
+  type: NodePort
   selector:
     app.kubernetes.io/name: traefik-ingress-controller
     app.kubernetes.io/component: load-balancer
