--- a/kustomize/overlays/docker-server/daemonset.yaml
+++ b/kustomize/overlays/docker-server/daemonset.yaml
@@ -1,10 +1,20 @@
 ---
-kind: Daemonset
+kind: DaemonSet
 apiVersion: apps/v1
 metadata:
   name: traefik-ingress-controller
+  labels:
+    app.kubernetes.io/component: load-balancer
+    app.kubernetes.io/part-of: traefik-ingress-controller
 spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: load-balancer
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: load-balancer
+        app.kubernetes.io/part-of: traefik-ingress-controller
     spec:
       tolerations:
         # these tolerations are to have the daemonset runnable on control plane nodes
@@ -18,14 +28,16 @@ spec:
       containers:
         - name: traefik
           args:
-            - --accesslog
-            - --entrypoints.web.Address=:80
-            - --entrypoints.websecure.Address=:443
-            - --providers.kubernetescrd
+            - --api.insecure=true
+            - --accesslog=true
+            - --api.dashboard=true
+            - --entrypoints.web.address=:80/tcp
+            - --entrypoints.websecure.address=:443/tcp
             - --providers.kubernetescrd.allowCrossNamespace=true
             - --serverstransport.insecureskipverify=true
             - --api.dashboard=true
-            - --api.insecure=true
+            - --ping=true
+            - --providers.http.tls.insecureskipverify=true
             ###- --certificatesresolvers.myresolver.acme.tlschallenge
             ###- --certificatesresolvers.myresolver.acme.email=jay.amorin@gmail.com
             ###- --certificatesresolvers.myresolver.acme.storage=acme.json
@@ -33,7 +45,27 @@ spec:
             # Once you get things working, you should remove that whole line altogether.
             ###- --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
             - --log.level=DEBUG
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /ping
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 2
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 2
           ports:
-            - name: dashboard
+            - name: web
+              containerPort: 80
+            - name: websecure
+              containerPort: 443
+            - name: admin
               containerPort: 8080
+          securityContext:
+            capabilities:
+              drop:
+              - ALL
+              add:
+              - NET_BIND_SERVICE
 
