--- a/kustomize/overlays/docker-server/dashboard-service.yaml
+++ b/kustomize/overlays/docker-server/dashboard-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: traefik-ingress-controller-dashboard
+  namespace: traefik
 spec:
   ports:
     - protocol: TCP
