--- a/kustomize/overlays/docker-server/kustomization.yaml
+++ b/kustomize/overlays/docker-server/kustomization.yaml
@@ -1,10 +1,10 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: traefik
 resources:
   - ../../base
   - dashboard-service.yaml
   - traefik-ingress-controller-dashboard-ingressroute.yaml
+  - kubernetes-dashboard-ingressroute.yaml
 patches:
   - path: daemonset.yaml
