--- a/kustomize/overlays/docker-server/traefik-ingress-controller-dashboard-ingressroute.yaml
+++ b/kustomize/overlays/docker-server/traefik-ingress-controller-dashboard-ingressroute.yaml
@@ -2,13 +2,14 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: kubernetes-dashboard
+  name: traefik-ingress-controller-dashboard
+  namespace: traefik
 spec:
   entryPoints:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`k8s-dashboard.localdomain.com`) && PathPrefix(`/dashboard`) || Host(`k8s-dashboard.localdomain.com`) && PathPrefix(`/api`)
+      match: Host(`traefik-dashboard.localdomain.com`) && PathPrefix(`/dashboard`) || Host(`traefik-dashboard.localdomain.com`) && PathPrefix(`/api`)
       services:
         - kind: Service
           name: traefik-ingress-controller-dashboard
