added basic authentication

--- a/kustomize/overlays/docker-server/kubernetes-dashboard-ingressroute.yaml
+++ b/kustomize/overlays/docker-server/kubernetes-dashboard-ingressroute.yaml
@@ -1,4 +1,35 @@
 ---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: kubernetes-dashboard-selfsigned
+  namespace: kubernetes-dashboard
+spec:
+  secretName: kubernetes-dashboard-selfsigned
+  issuerRef:
+    name: local-clusterissuer
+    kind: ClusterIssuer
+  dnsNames:
+    - kubernetes-dashboard.localdomain.com
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: kubernetes-dashboard-http
+  namespace: kubernetes-dashboard
+spec:
+  entryPoints:
+    - web
+  routes:
+    - kind: Rule
+      match: Host(`kubernetes-dashboard.localdomain.com`)
+      services:
+        - kind: Service
+          name: kubernetes-dashboard
+          port: 443
+      middlewares:
+        - name: traefik-http-to-https@kubernetescrd
+---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -9,10 +40,10 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`k8s-dashboard.localdomain.com`)
+      match: Host(`kubernetes-dashboard.localdomain.com`)
       services:
         - kind: Service
           name: kubernetes-dashboard
           port: 443
   tls:
-    certResolver: default
+    secretName: kubernetes-dashboard-selfsigned
