--- a/kustomize/overlays/docker-server/kustomization.yaml
+++ b/kustomize/overlays/docker-server/kustomization.yaml
@@ -3,6 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - http-to-https-middleware.yaml
+  - basic-authentication-middleware.yaml
   - dashboard-service.yaml
   - traefik-ingress-controller-dashboard-ingressroute.yaml
   - kubernetes-dashboard-ingressroute.yaml
