--- a/kustomize/base/traefik/kustomization.yaml
+++ b/kustomize/base/traefik/kustomization.yaml
@@ -2,10 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: traefik
+commonLabels:
+  app.kubernetes.io/part-of: ingress-controller
+  app.kubernetes.io/managed-by: kustomize
 resources:
-  - namespace.yaml
   - https://raw.githubusercontent.com/traefik/traefik/v2.10/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
   - https://raw.githubusercontent.com/traefik/traefik/v2.10/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
-  - service-account.yaml
+  - namespace.yaml
+  - serviceaccount.yaml
   - daemonset.yaml
   - service.yaml
