--- a/kustomize/base/traefik/serviceaccount.yaml
+++ b/kustomize/base/traefik/serviceaccount.yaml
@@ -2,5 +2,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: default
   name: traefik-ingress-controller
+  labels:
+    app.kubernetes.io/name: traefik-ingress-controller
